--- a/package.json
+++ b/package.json
@@ -9,14 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/material": "^5.15.17",
+    "@mui/x-date-pickers": "^7.5.0",
+    "@mui/x-date-pickers-pro": "^7.5.0",
+    "bootstrap": "^5.3.3",
+    "dayjs": "^1.11.11",
+    "jquery": "^3.7.1",
+    "next": "14.2.3",
     "react": "^18",
+    "react-bootstrap": "^2.10.2",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-icons": "^5.2.1",
+    "rsuite": "^5.61.0",
+    "sass": "^1.77.0"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@types/node": "20.12.11",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
